# flask-app

./: app.py  pyproject.toml  requirements.txt
