[project]
name = "flask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.1",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "uvicorn>=0.30.6",
]
